# mcpl-geant4

./: README.md
.github/resources/: condamcplg4.yml
.github/workflows/: conda.yml  pypi.yml
devel/pypath/mcplg4devel/: check_ruff.py  check_version.py  cli.py
example_read/: CMakeLists.txt  example.cc
example_write/: example.cc
